@@ -1257,3 +1257,4 @@ Virtual server backups can now be to multiple destinations, both local and remot
 The maximum message size to check for spam can now be set even when regular spamassassin is used, as well as when using spamc.
 When Webalizer is enabled for a domain, allowed users for the /stats URL path can now be edited on the Protected Web Directories page.
 Fixed DKIM support to handle large numbers of domains.
+Added byte quota sizes to the list-domains, list-users and list-resellers API calls, which are easier for code to parse.
